# disc_flight_sim

./: Cargo.toml  Justfile  LICENSE  README.md
disc_flight_sim/: Cargo.toml  Justfile
disc_flight_sim/fuzz/: Cargo.toml
disc_flight_sim/fuzz/fuzz_targets/: fuzz_target_1.rs
disc_flight_sim/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/www/: index.html  main.js
