[package]
name = "disc_flight_sim"
version = "0.1.0"
edition = "2021"
description = "Rust disc golf flight physics simulator with WASM and 3D output"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bionicles/disc_flight_sim"
keywords = ["disc-golf", "physics", "wasm", "simulation"]
categories = ["science", "simulation", "web-programming", "wasm"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = []
wasm = []

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
anyhow = "1.0.98"
uom = { version = "0.37", features = [ "serde" ] }
cargo-fuzz = "*"
postcard = { version = "1.0", features = ["alloc"] }

[lints]
workspace = true